# xunit-slack-reporter

./: .bumpversion.cfg  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-build.local  LICENSE  Makefile  Pipfile  README.md  action.yml  entrypoint.sh  mypy.ini  pylintrc  pyproject.toml  pytest.ini
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml  main.workflow
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  pull_request.yml
app/: constants.py  entrypoint.sh  script.py
app/utils/: slack_utils.py  xunit_utils.py
build_action/: entrypoint.sh
build_env/: Dockerfile
tests/: test_helloworld.py  test_script.py  test_slackutils.py  test_xunitutils.py
tests/utils/: fixtures.py  xunit_files.py
tests/utils/files/: mocha-success.xml  pytest-failure.xml  pytest-success.xml
